--- a/src/package.json
+++ b/src/package.json
@@ -19,10 +19,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.1.4",
+    "path": "^0.12.7",
     "socket.io": "^4.7.4"
   }
 }
